# llm-benchmark

./: .gitignore  README.md  USER_GUIDE.md  benchmark.py  config.yml  pyproject.toml  requirements.txt  scenario.yml
docs/: cli-options.md  configuration.md  debug-logging.md  execution-modes.md  export-formats.md  html-reports.md  queue-testing.md
llm_benchmark/: __init__.py  config.py  debug_logger.py  engine.py  exporters.py  html_report.py  metrics.py  mock_data.py  mode_runners.py  modes.py  timeseries.py
src/: __init__.py  config.py  debug_logger.py  engine.py  event_bus.py  events.py  html_report.py  http_logging.py  mock_data.py  request_executor.py
tests/: __init__.py  conftest.py  test_benchmark.py
