[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-benchmark-tool"
version = "1.0.0"
description = "A comprehensive benchmarking tool for OpenAI-compatible APIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LLM Benchmark Tool", email = "benchmark@example.com"}
]
keywords = ["llm", "benchmark", "openai", "api", "performance", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]

dependencies = [
    "httpx[http2]>=0.28.0",
    "PyYAML>=6.0.2",
    "numpy>=2.1.3",
    "tqdm>=4.67.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
rich = [
    "rich>=13.9.4",
]

[project.scripts]
llm-benchmark = "benchmark:main"

[project.urls]
Homepage = "https://github.com/example/llm-benchmark-tool"
Documentation = "https://github.com/example/llm-benchmark-tool#readme"
Repository = "https://github.com/example/llm-benchmark-tool.git"
Issues = "https://github.com/example/llm-benchmark-tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_benchmark*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
